# ChangeLog for kde-misc/kdirstat
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/kdirstat/ChangeLog,v 1.21 2008/09/20 09:56:25 armin76 Exp $

  20 Sep 2008; Raúl Porcel <armin76@gentoo.org> kdirstat-2.5.3-r1.ebuild:
  sparc/x86 stable wrt #232740

  20 Sep 2008; nixnut <nixnut@gentoo.org> kdirstat-2.5.3-r1.ebuild:
  Stable on ppc wrt bug 232740

  17 Sep 2008; Thomas Anderson <gentoofan23@gentoo.org>
  kdirstat-2.5.3-r1.ebuild:
  stable amd64, bug 232740

*kdirstat-2.5.3-r1 (14 Sep 2008)

  14 Sep 2008; Carsten Lohrke <carlo@gentoo.org>
  +files/kdirstat-2.5.3-desktop-entry-fix.diff, +kdirstat-2.5.3-r1.ebuild:
  Fix desktop entry.

  23 Jul 2008; Peter Alfredsen <loki_val@gentoo.org>
  +files/kdirstat-2.5.3-gcc43.patch, kdirstat-2.5.3.ebuild:
  Fix up for gcc-4.3, bug 232623.

*kdirstat-2.5.3 (09 Jun 2007)

  09 Jun 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +kdirstat-2.5.3.ebuild:
  Version bump as per bug 181251.

  14 Jun 2006; Marcus D. Hanwell <cryos@gentoo.org> -kdirstat-2.4.3.ebuild,
  kdirstat-2.4.4.ebuild:
  Stable on amd64, bug 134765. Removed old version.

  31 May 2006; Joshua Jackson <tsunam@gentoo.org> kdirstat-2.4.4.ebuild:
  Stable on x86; bug #134765

  30 May 2006; Joseph Jezak <josejx@gentoo.org> kdirstat-2.4.4.ebuild:
  Marked ppc stable for bug #134765.

  30 May 2006; Jason Wever <weeve@gentoo.org> kdirstat-2.4.4.ebuild:
  Stable on SPARC wrt bug #134765.

*kdirstat-2.4.4 (03 Apr 2006)

  03 Apr 2006; Carsten Lohrke <carlo@gentoo.org> +kdirstat-2.4.4.ebuild:
  Version bump.

  28 Aug 2005; Simon Stelling <blubb@gentoo.org> kdirstat-2.4.3.ebuild:
  stable on amd64

  22 May 2005; Tobias Scherbaum <dertobi123@gentoo.org>
  kdirstat-2.4.3.ebuild:
  Stable on ppc.

  10 May 2005; Gustavo Zacarias <gustavoz@gentoo.org> kdirstat-2.4.3.ebuild:
  Stable on sparc

  01 May 2005; Carsten Lohrke <carlo@gentoo.org> kdirstat-2.4.3.ebuild:
  stable on x86
