@@ -1,9 +1,11 @@
 AUX kdirstat-2.5.3-desktop-entry-fix.diff 1078 RMD160 17f860b64d54021e65f36b5352d0412994def20a SHA1 5248c2238bfa5bf018467d539bc1c114f2db09b2 SHA256 1b46f3edc1f7777896ee8395fe6304b079dedf401f6e1086e9c5480b5ea1e29e
 AUX kdirstat-2.5.3-gcc43.patch 447 RMD160 2f38851ed0cadcc1bc96f7eab261e4ba3b871256 SHA1 723b997c4a4d214ddaa2d1c2a93d2fd918c2d802 SHA256 e2a718d762762eca6b3fa2d869bb4ad268465446137d0b364d2eb7db0a4008d7
+DIST kde-admindir-3.5.5.tar.bz2 187274 RMD160 24528f3bf94e7d1a1036b6e5af180719785839ed SHA1 b640d2606305201b0ec030555c324d326440efff SHA256 1aa56856e432839ec74a67ab33fc21b56ed4f1b4b5c60bfd5b953cb2d3423153
 DIST kdirstat-2.4.4.tar.bz2 642973 RMD160 e42da54f6da86d3993b946138c9305f4be5cbda0 SHA1 fb6a5da9abd2094f3bb3c135dffcbd7aea074c6e SHA256 4e8317efab702f0eacff1ea15baed578c9599be1613231a21404da1062c6aee7
 DIST kdirstat-2.5.3.tar.bz2 676903 RMD160 0795175e7a305ff99d465b3d26df9dc2b9ee2054 SHA1 69be7fd1ffaecee90d81329a6ebcadc2e5208983 SHA256 ee9f148e316573469862e04092a128405b9f641b60fa045ef9d2a245827f3749
 EBUILD kdirstat-2.4.4.ebuild 548 RMD160 077e785f6b723bca51e9f59d91a7c7b490e88eb3 SHA1 b329cdd75884a084b5785c5627dd57227d90644b SHA256 5fb3408c01f62a620c9c829b5de2d3f103e41f67ab715d0c4f92d17634af55cd
 EBUILD kdirstat-2.5.3-r1.ebuild 723 RMD160 ab0f21662016f0e05aec1f39e4127b5c05844dd6 SHA1 06fcea246a68d9dbed0ced6f624a0953078d5c24 SHA256 c8f8821c366d63f8f284fbdf9323e023f65df6e8f045bdc8c93c92acd6fc9ca6
+EBUILD kdirstat-2.5.3-r2.ebuild 778 RMD160 68651dfdc89a867401511e453eaf5fa59385f4c4 SHA1 9e86af0461325344db55e7c254418aad046eec96 SHA256 b3153ed15a55b8836ffc288863253ad425a6bcb938a59b73b667bf2c5e081ce3
 EBUILD kdirstat-2.5.3.ebuild 599 RMD160 88adc740233913d77bb55bb1d731e7923252dead SHA1 2369c39d86a7021cdf588798f3ff8f034c3e36a4 SHA256 f009fd7cf6da9da363f98009d38ae71e29f8a7da8e5f8235272fe9d22d207029
-MISC ChangeLog 4735 RMD160 582f725a086e0079e4f8ed81b4a517fa32edbfb0 SHA1 f6f9b43426ea99e10596302504916e2fa316057e SHA256 e4f8089b7be45ad265126bf3a8228eaa413033e74569a27bcc4a02163dceb578
+MISC ChangeLog 4854 RMD160 c591a4f17a38a545e2980004fe1f62ac8b71bd1d SHA1 1ac69a32823fd5290564756943483048625a6c18 SHA256 b7f3724c1599ac40879689b0aafbd850dd1a5ee584fa79bc05bb54eaf420e73c
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
